fix z-index of main component

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -5,6 +5,7 @@
     max-width: 1100px;
     justify-content: space-between;
     width: 100%;
+    z-index: -1;
 }
 
 .mainContentContainer {
